--- a/index.html
+++ b/index.html
@@ -8283,6 +8283,262 @@ sexo
 sexto
 sexual 
 sexualidad
+short
+shoshón
+sí 
+sí 
+si alguién
+si no 
+sí
+si
+sialorrea
+SIDA 
+siempre
+sien
+sierra
+siete
+siete tribus
+significado
+significar
+signo de interrogación 
+signo del día
+signo
+Sihuatán 
+Sihuatepeque 
+silencio
+silla ancha
+silla deontar
+silla de ruedas
+silla
+sillón
+silo
+silo
+silvar
+silvido
+simulado
+simulador 
+simular
+sin consideración 
+sin convicción
+sinedida
+sin número
+sin rumbo
+sin valor
+sinagoga
+Sinaloa 
+sinaloense
+sincel
+sindorme de Down
+síndrome
+Singapur
+singular
+sino
+sintetizar 
+sirena
+Siria
+sirio
+sirvienta
+sirvienta
+sirviente
+sisitema nervioso
+sistema nervioso
+sistema oseo
+sistema respiratorio
+sitio
+sobada
+sobado
+sobajado 
+sobajar 
+sobajar
+sobar 
+soberano
+soberbia
+soberbio
+sobra
+sobrar
+sobre
+sobre él 
+sobre el agua
+sobre ellos 
+sobre las aguas alegres
+sobre
+sobrenombre
+sobrepasar
+sobrina
+sobrino
+sociabilidad
+social
+sociología
+sociólogo
+Soconusco 
+sol
+solamente
+solana
+solar
+solar
+soldado 
+soldado
+soldado
+soldado
+soldadura
+soldar 
+soldar el hueso
+soledad
+solemnidad
+solicitado
+solicitar 
+solicitud
+solitaria
+solitario
+solitario
+sollozar
+sollozo
+sólo un poco 
+solo
+solo
+solo
+soltar
+soltera
+soltero
+somalí
+Somalia
+sombra de árbol 
+sombra de persona 
+sombra de persona
+sombra
+sombrero grande
+sombrero
+sombrilla 
+sometido
+somosuchos
+sonaja
+sonar bien
+sonido agudo
+sonido
+sonidoetálico de un choque
+Sonora 
+sonorense
+sonoridad
+sonrojar
+sonrrojado
+sonsacado 
+sonsacar
+sonzo
+soñar
+soñar
+soñoliento 
+sopa
+sopatia
+sope
+sopear
+soplado
+soplar
+soplar
+soplo
+soplón
+soportado
+soportar
+soporte
+soprano
+sorber
+sorbo
+sorbo
+sordo
+sordo 
+sorgo
+sortija
+sosegar
+sosiego
+sospecha
+sospechar
+sospechoso
+sostener
+sostenido
+sotano 
+soya
+su 
+su cara
+su lugar de nacimiento 
+su ombligo deuego 
+su parte alta
+su señoría
+suave
+suave
+suavidad
+suavidad
+suavisante
+súbdito 
+subida
+subido 
+subir
+subir al escenario
+subir de peso
+subirse
+súbitamente
+submarino
+succionar 
+Súchil 
+Suchitoto 
+suciedad
+sucio
+sucio
+sudadera
+sudar
+sudor
+sudoración
+Suecia
+sueco
+suegra
+suegro
+suela
+suela
+suelo
+suelto
+suelto
+sueño
+sueño
+suero
+sueter de lana
+sueter
+sufrido
+sufrimiento
+sufrir
+suicida
+suicidar
+suicidarse
+suicidio
+Suiza
+suizo
+Sultepec 
+sumar
+sumergir 
+sumido
+sumirse
+superar
+superficie
+superficie
+superfluo
+supermercado
+supervivencia
+suplir
+supuración
+sur
+surco
+sureño
+surgimiento
+Surinam
+sus piernas
+sus rayos luminosos 
+suspirar
+suspiro
+sustancia
+sustantivo
+sustituido
+sustituir
+sustituto
+susto
+susurrar 
+sutura
 </div>
 
 <div class="nahuatl">
@@ -16527,6 +16783,262 @@ ahuilneliztli
 inic chicuace
 ahuilneyo
 ahuilneyotl
+itocaltzatontli
+xoxoni
+intla
+quemacatzin
+intla aca
+tlamo
+quemah
+s
+coztactli
+CTA
+nonchipa
+canahuacantli
+tepetlan
+chicome
+chiconcalpultin
+nezcayotiliztli
+nezcayotia
+tliltetlanilli
+cemilhuitlapoalli
+machiotl
+Cihuatan
+Cihuatepec
+necahualiztli
+tzinicpalli
+ehuaicpalli
+omemalaicpitl
+icpalli
+tzatzazicpalli
+tlallancuezcomatl
+cencolotl
+tlanchiqui
+tlanchiquitli
+tlapiquilli
+netlapiquiani
+tlapiquia
+ixtomahuacac
+zantlapictli
+aihuiayo
+zantlapohualtin
+ahuicpa
+amotlazoyotl
+yudioteocalli
+Xinaloac
+xinaloatl
+tepozcuiloni
+xoalli
+iteztlahtlacolli
+Singapuria
+moncuamoqui
+amozan
+hueyaquilia
+acihuamichtli
+Siria
+siriatl
+coco
+tequiyo
+ahachtli
+tlahuapanquetl
+patzmicquetl
+omiyotl
+elpanquetl
+onohuayan
+tlaxaqueloliztli
+tlaxaquelolli
+tlazotlauhtli
+zotlahua 2
+xacualtia
+xaqueloa
+huecapac
+nepohualiztli 2
+nepohuani
+tlacahuallotl
+imocahua
+acopan
+itechpa
+apan 2
+intechpa
+ahuilizapan
+-pan
+ontetocaitl
+tecahua
+cihuamachtli
+yezconetl
+teicniuhyotl
+tlacacniuhyo
+tlacacniuhyotiliztli
+tlacaicniuhyotini
+Xoconochco
+tonatiuh
+zaniyo
+netoniloyan
+tonatiuhyo
+callalli
+patiuhtli
+yaoquizqui
+teyaotlani
+tlahuapahualli
+tlahuapahuatiliztli
+huapahua
+omizoloa
+cactimaniliztli
+mahuizotl
+tlacihuitilli
+cihuitia
+tlacihuitiliztli
+ilamaocuilli
+icetlacatl
+atleinemic
+tzitzicuinoa
+tzitziciunoliztli
+zan tepitzin
+zan
+cel
+icel
+macahua
+oquichtlanqui
+cihuatlanqui
+somaltecatl
+Somalia
+zacachimalli
+tonameyotl 2
+meyotl
+cehuallotl
+cuatlazecahuiloni
+tzonacahuilli
+quiauhuiloni
+calchaqui
+timiectin
+ayacachtli
+nahua 2
+yolo 1
+tzatziliztli
+calani
+Xonotan 2
+xonotecatl
+nahuayotl
+ixchichilca
+ixchichilihui
+quequelolli
+quequeloa
+topilli 3
+temiqui
+cochitta
+cochmiqui 1
+ciahualli
+tzopitiatl
+tzopitl
+ciahuaya
+tlalpitztli
+tlalpitza
+patza
+tlalpitzaliztli
+tlapitzani
+ihiyohuilli
+ihiyohuia
+ihiyohuiliztli
+huelicacuicani
+tlaltequi
+tlaltequiliztli
+centlatectli
+nacaztzatzatl
+nacazatzatl
+xochitlaulli
+motzatzaztli
+cehuia 3
+tlamanticaniliztli
+chicoyotl
+chicoyoloa
+chicoyoloani
+tzitzquia
+tlatzitzquilli
+tlallancalli
+ecatl
+i-
+ixayac
+itlacatian
+itlexic
+itlacpacyo
+amehuatzin
+yamaztic
+yamanqui
+huelicayotl
+ahuiayotl 2
+huelicayo
+pachoaloani
+tlecoliztli
+tlecohuilli
+tleco
+acana 2
+etia
+tlecohuia
+atenamachpan
+tepozacamitl
+chichina 2
+Xochitl
+Xochitotoc
+catzahualiztli
+catzactic
+tzoyoc
+itocalnetzhuiliztli
+neitonalia
+neitonalli
+neitonaliztli
+Zuecapan
+zuecatl
+monnantli
+montahtli
+cacxopetlatl
+cachuapalli
+tlalpantli
+tomaloni
+caxahuac
+cochiztli
+yohualtetzahuitl 1
+chichihualayatl
+ichcatetectli
+huipiltetectli
+tlaihiyohuani
+tlaihiyohualiztli
+tlaihiyohua
+atletini
+atletilia 2
+mictilia
+atletiliztli
+Helvetia
+helvetiatl
+Zoltepec
+tlapohua
+apoloctia
+tlapolactilli
+pachihui
+cempanahuia
+ixco
+ixtli 1
+anequiliztli
+hueytianquiztli
+Chicauh nemiliztli
+maxiltia
+temalatli
+huitztlan
+copichahui
+huitztlani
+izcalli
+Surinamia
+imetzhuan
+itonalmeyotzitzihuan
+elcicihui
+elcicihuiliztli
+yelli 2
+yeltic
+maxiltilli
+ixiptlati
+maxiltiani
+temauhtiliztli
+zazanaca 2
+queanatzincac
 </div>	 
 		 
 	 </body>
