--- a/index.html
+++ b/index.html
@@ -8539,6 +8539,284 @@ sustituto
 susto
 susurrar 
 sutura
+tabaco
+tabajo
+tabano
+Tabasco 
+tabasqueño
+tabique
+tabla
+tablero de canasta
+tablero
+tablilla
+tacaño
+tachado
+tachar
+taco de billar
+taco
+Tacuba 
+tajado
+tajar
+tal cual
+tal vez
+tal vez 
+tal vez
+tal
+tala
+talabartería
+taladrado
+taladrar 
+taladro
+talar 
+taller
+tallo
+talón
+talud
+tamal de chile
+tamal de dulce
+tamal de elote
+tamal deríjol
+tamal de grano deaíz
+tamal de haba
+tamal gigante
+tamal
+tamaño
+tamarindo
+Tamaulipas
+tamaulipeco
+tamaulipeco 
+Tamazula 
+Tamazulapan 
+también
+también 
+también
+tambor
+tambora
+tamborcito
+tamborilero
+tampoco
+tampoco 
+tan
+tan pronto como 
+tan pronto como
+tanque de gas
+tanque
+tanta
+tantas veces
+Tanzania
+tanzano
+taoísmo
+taoísta 
+tapador
+Tapalpa 
+tapanco
+taparse
+taparse
+tapia
+tapir 
+tarántula 
+tardanza
+tardar
+tarde
+tarde
+tardío
+tarea
+tarja
+tarro
+tartamudear
+tartamudo
+tarugo
+tatarabuela
+tatarabuelo
+Taxco
+taxi 
+Tayikistán
+taza
+taza ánfora
+tazón
+te amo 
+te estrañoucho
+te extraño
+té limón
+té
+téedicinal
+te quiero
+te quieroucho
+te
+Teapa 
+teatro
+teatro
+teatro
+teatro
+Tecamac 
+techado
+techar
+techo deadera
+techo
+tecla
+teclado
+tecnología
+tecnología
+tecnológico
+Tecolutla 
+Tecozautla 
+Tecpan de Galeana 
+Tecuala 
+tecuilhuitontli 
+Tegucigalpa 
+Tehuacan 
+Tehuantepec 
+teibolera
+teja
+tejado
+tejedora
+tejer
+tejido
+tejocote
+tejocotes en conserva
+tejolote
+tejón 
+tela bordada
+tela delgada
+tela
+telar
+telaraña
+telecomunicación
+teléfono celular
+teléfono
+teléfonoovil
+teléfono público
+telescopio
+televisión
+tema
+Temascalsingo 
+Temazcalapa 
+temblar deiedo
+temblar
+temeroso
+temeroso
+Temixco 
+Temoaya 
+temor
+temor
+tempestad
+temple
+templo deadera
+templo
+templo
+Templo Mayor
+temprano
+temprano
+Tenancingo 
+Tenayuca 
+tenazas
+tender 
+tendero
+tendero
+tendido
+tenebroso 
+tenebroso
+tenedor
+tener 
+tener amigos 
+tener asco
+tener asma
+tener buen olor 
+tener calor
+tener compasión
+tener confianza 
+tener devoción 
+tener edad
+tener envidia
+teneriebre
+tenerilo
+tenerrío
+tener hambre
+tener hambre
+tener hijos
+teneriedo
+tener necesidad de ir al baño
+tener paciencia
+tener sed
+tener sueño
+tener
+teniente
+tenis
+tenis
+tenochca
+Tenochtitán 
+tentación
+tentador
+tentar 
+teñidura
+Teotepeque 
+Teotihuacan 
+teotihuacano
+Teotitlan del Valle 
+tepache
+tepache
+Tepalcatepec 
+tepaneca
+Tepeaca 
+Tepeapulco 
+Tepejí del Río
+tepetate
+Tepetitlan 
+Tepeyahualco 
+tepezcuintle 
+Tepic 
+Tepito 
+tepojal
+teponaztle
+Tepotzotlán 
+tepozán
+Tepoztlán 
+Tequila 
+tequila
+Tequisquiapan 
+Tequixquiac 
+terapia
+tercero
+terciopelo 
+terminal de autobuses
+terminar
+terminar
+termino
+termino
+termómetro
+ternero
+ternura
+terraplen
+terrateniente
+terratenientes
+terremotouerte
+terremoto
+terremoto
+terreno
+terrestre
+terrestre
+terrible
+terrible
+territorio
+terrón de arena
+terrón
+terrorismo
+terrorista
+tesorería
+tesorero
+tesoro
+testamento
+testamento 
+testículo
+Tetelcingo 
+Texcoco 
+tez
+Tezcatlipoca 
+Teziuhtlán 
+Tezontepec 
+tezontle
+Tezoyuca 
+Tezozomoc
 </div>
 
 <div class="nahuatl">
@@ -17039,6 +17317,284 @@ maxiltiani
 temauhtiliztli
 zazanaca 2
 queanatzincac
+yetl
+tequitl
+tecmilotl
+Onohualco
+onohualtecatl
+tepanpitzahuac
+huapalli
+chiquiuhmachiotl
+patolhuapalli
+huapaltontli
+aninocotontlani
+tlaxinililli
+tlaxinilia
+tlacolpatolli
+tlaco
+Tlacopan
+tetecqui
+tetequi 2
+maciuhqui
+azo yeh
+zanen
+azo zan
+yuhqui
+tlacuauhuitequiliztli
+ehuapitzcalli
+tlamamalli 3
+tlamamalia
+amamalocotl
+cuauhuitequi
+tlachihualcalli
+quiyotl
+icxitl
+tenantli
+chiltamalli
+xocotamalli
+elotamalli
+etamalli
+elotamaltlapictli
+ahuaxtamalli
+ahuazuatamalli
+tamalli
+ixquichi
+palxocotl
+Tamaholipan
+tamaholipanecatl
+tamaholipatl
+Tamazollan
+Tamazolapan
+noihuan
+noyuhqui
+noihqui
+huehuetl
+panhuehuetl
+tecomalpilli
+huehuecuicani
+amono
+nian noihqui
+zan yeyo
+zan ica
+in oyuh
+ahuiyapopocomitl
+miquiloni
+ixquichi
+izquipa
+Tanzania
+tanzaniatl
+taoyotl
+taotlacatl
+tlacalli
+Tlalpalpan
+tlalpanco
+motzacua
+tlaquentia
+xamixtepantli
+antatl
+tlazoltocatl
+nehuehcahualiztli
+huehcahua 2
+teotlactli
+teotlac
+tleotlacuilli
+cemilhuitequitl
+xaxacualoaqui
+tlapatzconi 2
+eltzatzacui
+eltzatzaquini
+tlacuauhtoconi
+piptontli
+mintontli
+Tlachco
+taxi
+Tayiquistania
+tochcaxitl
+apilolli
+tochtecomatl
+nimitztlazohtla
+cenca nimitztlailnamiqui
+nimitztlailnamiqui
+zacalimoni
+xihuatl
+apahtli
+nimitztlamonequiltia
+ixachi nimitztlamonequiltia
+mitz-
+Teapan
+chuhcayotl
+ixehuacalli
+chuhcan
+ixehuayotl
+Tecamac
+calcuatli
+calcua
+huapalcalcuaitl
+cuatlatzacualcalli
+machiomiuhqui
+machiotlacuiloni
+tecnolotiliztli
+amantecayotl
+tecnoloyo
+Tecolotlan
+Tecozauhtlan
+Tecpan
+Tecuanlan
+tecuilhuitontli
+Tecuhtzincalpan
+Tehuacan
+Tecuantepec
+auhyani
+tepalcacopichtli
+tepalcatlapantli
+tlaxinepanoani
+iquiti
+iquitiliztli
+texocotl
+texocotzopellotli
+texolotl
+tecozantli
+tlatzoptli
+tocapeyotl
+tlatzopictli
+tilmaloyan
+zahualli
+temacilmatiliztli
+ehecatlanonotzqui
+mecatlanonotzqui
+ecatelefoni
+nonotzalizcaxitl
+ilhuicamachiolli
+huecaixipcaxitl
+tlahtolpechtiliztli
+Tematzcaltzinco
+Tematzcalapan
+cuacenihui
+papatlaca
+neizahuiliztli
+temamauhtli
+Temizco
+Temoayan
+tlamauhtiliztli
+teitzauhtiliztli
+ehecaquiahuitl
+tlayamaniliztli
+xacalteopan
+tlamanacalli
+teocalli
+Huey Teocalli
+ocualcan
+ayacuael
+Tenantzinco
+Tenayocan
+tepoztlaloni
+zoa 2
+tianamacac
+tlanamacac
+tlazcuhtli
+tlayohuallo
+mixtecomayo
+nacatetecqui
+pia 2
+icniuhtia
+tlaeltia
+neihotzacualia
+ahuia 2
+tonalia
+incnoyohua
+chixcaca
+teomati
+huecahua
+yolcocoa
+atonahui
+tene
+cecui
+apitzmiqui
+mayana
+tlacachihua
+momauhtia 2
+axixmiqui
+tlapaccaihiyohuia
+amiqui 2
+cochmiqui 2
+imacaci
+yaocallapixqui
+tenixliztli
+tenix
+tenochcatl
+Tenochtitlan
+teyeyecoyotl
+teyeyecoani
+yeyecoa 3
+tlapaliztli
+Teotepec
+Teotihuacan
+teotihuacatl
+Teotitlan
+tepachnecuhtli
+tepeachnecuhtli
+Tepalcatepec
+tepanecatl
+Tepeyacac
+Tepeapolco
+Tepexic
+tepetlatl
+Tepetitlan
+tepeyahualco
+tepeitzcuintli
+Tepic
+Tepiton
+tepoxalli 
+teponaztli
+Tepotzotlan
+axixcuahuitl
+Tepoztlan
+Tequillan
+tequila
+Tequixquiapan
+Tequixquiac
+tematzticiyotl
+yeto
+puchinchi
+calmimilolcoyan
+cahuilia
+tzonquiza
+cenetlalolli
+tzonquizaliztli
+cauhmachiolli
+cuacuahueconetl
+celticayotl
+tlaltelli
+tlaleh
+tlalehque
+tlalollin
+tlaltotomocatl
+tzintzincaliztli
+altepemilli
+cemtlalticpatl
+tlaltic
+temamauhtic
+temamauhti
+nacallotiloayan
+xaltetl
+tlaltetl
+yaoteizahuiyotl
+yaoteizahuic
+teocuitlapiayotl
+teocuitlapixqui
+teocuitlapialli
+nemiquiznahuatiliztli
+miquiznahuatiliztli
+ahuacatl
+Tetetzinco
+Tezcococ
+ixtetzahuacac
+Tezcatlilpoca
+Texiuhtlan
+Tetzontepec
+tetzontli
+Tetzonyocan
+Tezozomoc
 </div>	 
 		 
 	 </body>
