--- a/index.html
+++ b/index.html
@@ -8817,6 +8817,310 @@ Tezontepec
 tezontle
 Tezoyuca 
 Tezozomoc
+tía
+Tianguistengo 
+tibia
+tibieza
+tiburón 
+tiempo atrás
+tiempo de cosechar
+tiempo de esperanza
+Tiempo derutas
+tiempo de la cosecha
+tiempo
+tiempo presente
+tienda de campaña
+tienda
+tierno
+tierno
+tierra baldía
+tierra castellana
+tierra compactada
+tierra deonte
+tierra de nacimiento
+tierra de regadío
+tierra española
+tierra
+Tierra
+tierra
+tierrairme
+tierra gruesa
+tierra hovohispana
+tierra levantada
+Tierra Mexicana
+tiesto
+tifoidea
+tigre acuático
+tigre dientes de sable
+tijeras de cocina
+tijeras
+Tilaco 
+tildío
+timidez
+tímido
+timón 
+timonel
+timoriano
+tina
+tinacal
+tinaja
+tinaja
+tinieblas
+tinieblas
+tinta de color
+tinta de zapato
+tinta
+tiña
+tío abuelo
+tío
+tiranía
+tiranizar 
+tirano
+tirar 
+tirar
+tiro de arco
+tiro
+tiro 
+tisis
+tititl
+titulo del libro
+Tizapan 
+Tizayuca 
+tiznado
+tiznar
+Tizoc 
+tizón
+Tlacolula 
+Tlacotalpan
+tlacoyo
+tlacoyo
+tlacuache
+Tlahuac 
+Tlahuelilpan 
+tlahuica
+Tlalmanalco 
+Tlalnepantla 
+Tlaloc 
+Tlalpujahua 
+Tlaltecuhtli 
+Tlanchinol 
+Tlapala
+tlapalería
+Tlapan
+tlaquixtilli
+tlascalate
+Tlatelolco 
+Tlaxcala 
+tlaxcalteca
+tlaxcaltequidad
+Tlaxcoapan 
+tlaxochimaco 
+tobillo
+tocado
+tocador
+tocar 
+tocar el piano
+tocar la trompeta
+tocarúsica
+tocer
+tocino
+toda la noche
+todavía
+todavía no
+todo
+todo el día
+todo elundo
+todos
+todos nosotros
+todos ustedes
+Togo
+Tokio
+toloache
+Toluca 
+tolvanera
+tomar prestado
+tomar
+tomar
+tomar
+tomate amarillento
+tomate
+Tomatlán 
+Tonalá 
+Tonatico 
+tonto
+tonto
+topado
+topografía
+torbellino
+torcedura
+torcedura
+torcer
+torcido
+torcido
+tordo 
+tormenta eléctrica
+tormenta tropical
+tormento
+torniquete
+toro 
+toronja
+toronjil
+torpe
+torpeza
+torre de defensa
+torre
+tórtola 
+tortuga delar 
+tortuga
+tos
+tosco
+tosco 
+tostado
+tostador 
+tostar 
+totonaco
+totopo
+Tototlán 
+toxcatl 
+tozoztontli 
+trabajador
+trabajar
+trabalenguas
+trabe
+tractor
+traducción al castellano o español
+traducción al náhuatl
+traducción
+traducido
+traducir
+traducir
+traer
+traer
+traficar en barco 
+tragadero 
+tragado 
+tragar 
+trago
+traición
+traicionado
+traicionar 
+traidor
+trailer
+traje de bañoasculino
+traje espacial
+traje guerrero
+trama
+tranquilo
+translación
+transladado
+transladar
+transportar
+transportar piedra
+transporte
+transporte
+tráquea
+trasero
+trasnbordador espacial
+trasquilador
+trastornado
+trastornar 
+trastorno
+travesura
+travieso
+trazado
+trazar 
+trazar
+trazo
+trébol
+trece
+trecientos
+treinta
+treinta y cinco
+tren
+trenza
+trepado
+treque
+tres
+tresil doscientos
+tresil seiscientos
+tres veces
+triángulo
+tribunal
+trigo 
+trinidad
+trío
+tripulación del barco
+triquina
+triste
+tristeza
+triturador
+triunfar 
+tromba
+tromba
+trombón
+trompeta
+trompo
+tronar cohetes
+tronco
+tronco seco
+trono andante
+tropezar
+tropiezo
+trotar
+trote 
+trucha
+trueno
+trueque
+trufa
+tú
+tu
+tu
+tuba
+tubérculo
+tuberculosis
+tuberculoso
+tubo 
+tucán 
+tuerto
+tuétano
+Tulancingo 
+Tulantepec 
+tulipán 
+Tultepec 
+Tultitlán 
+tumba
+tumbar
+tuna
+tuna
+tuna rosada
+tunar
+tundra
+tunecino
+Túnez
+tunica
+tupido
+tupir 
+turco 
+turco
+Turín
+turismo
+turismo
+turista
+turista
+turistear
+Turkmenistán
+turmenistaní
+turquesa
+turquesa natural
+Turquía
+turrón
+Tutotepec
+Tuvalu
+Tuxpan 
+Tuxtepec 
+Tuxtla 
+tuza
+Tzapotlatena 
 </div>
 
 <div class="nahuatl">
@@ -17595,6 +17899,310 @@ Tetzontepec
 tetzontli
 Tetzonyocan
 Tezozomoc
+ahuitl
+Tianquiztenco
+tlanitztli 2
+tlaquelchihualiztli
+ocelomichin
+amoquinquezcahuitl
+tlapixquipan
+netemachilizpan
+Xocoyotl
+pixquipan
+cahuitl
+axcancayotl
+tiamicalli
+tlanamaquizcalli
+zoquitic
+celtic
+tlalxiuhcahualli
+caxtiltlalli
+manalli 2
+cuauhtlalli
+yolcan
+amilli
+hispantlalli
+tlalli
+cemtlalticpac
+tlalticpactli
+cemanantlalli
+atoctli
+anahuatlalli
+potzalli 2
+Mexicatlalli
+topalcatl
+matlalzahuatl
+aocelotl
+cuitlamiztli
+tepozcotoni
+tepozximani
+Tlilaco
+amacoztitototl
+mauhcayotl
+ixmauhqui
+acalimachoni
+acalhueltecani
+timorinecatl
+apaztlapaloni
+tincalli
+xiuhcomitl
+acomitl
+tlatohuallotl
+tlayohuallotl
+tlapaltlilli
+cactlilli
+tlilli
+cuaxincayotl
+tecolli 2
+tlahtli
+nihicoltiliztli
+ihicoltia
+nihicoltiani
+mayahui
+tlaza 2
+minaliztli
+tlatlazaliztli
+acaltepiton
+piazquetzaliztli
+tititl
+amoxtocaitl
+Tizapan
+Tizayocan
+tlilhuilli
+tlilhuia
+Tizoc
+tlecohcotoccuahuitl
+Tlacolollan
+Tlahcotlalpan
+tlatloyotl
+tlacoyotl
+tlacuatzin
+Tlalhuac
+Tlahuelilpan
+tlahuicatl
+Tlalmanalco
+Tlalnepantlan
+Tlaloc
+Tlalpoxohuac
+Tlaltecuhtli
+Tlanchinoltic
+Tlapallan
+tlapalcoyan
+Tlalpan
+arrancado
+tlaxcalatl
+Tlaltelolco
+Tlaxcallan
+tlaxcaltecatl
+tlaxcalayotl
+Tlachcoapan
+tlaxochimaco
+quequeyolli
+cuachicquilli
+cuauhtezcacalli
+matoca
+pianoa
+quiquizoa
+tepona
+tlatlaci
+coyamenacahuaztli
+cenyohual
+ayemo
+aocmo
+nochi
+cemilhuic
+nochitlacah
+nochtin
+tinochtin
+nanmochtzitzintin
+Toco
+Toquio
+toloatzin
+Tollocan
+yohualtetzahuitl 2
+tlanehuia
+cui
+quitzqui
+ana
+coztomatl
+tomatl
+Tomatlan
+Tonallan
+Tonatiuhco
+pinotl
+xolopitli
+tenamicqui
+tlalmatiliztli
+hueyehecatl
+necuilli
+colotiliztli
+tetzilhua
+malinqui
+coltic
+acatzanatl
+tlahuehuetequiliztli
+atlacamaniliztli
+teamanaliztli
+tlaxoctli
+oquichcuacue
+hueylalaxtli
+hueylalaxcuahuitl
+tzotzonac
+anehualiztli
+huehcapan yaocalli
+tlapilcoyan
+cocotli 2
+chimalayotl
+ayotl 1
+tlatlaxtli
+amimatic
+ayocozqui
+tlacectli
+tlatehuatzani
+tlahuetza
+totonacatl
+totopochtli
+Tototlan
+toxcatl
+tozoztontli
+tequitini
+tequipanoa 2
+camanallatolli
+tetlacotl
+tractori
+caxtiltlahtolcuepaliztli
+nahuatlahtolcuapaliztli
+tlahtolcuepaliztli
+tlahtolcuepantli
+tlahtolcuepa
+cuepa
+hualhuica
+anilitia
+acalhuia
+acocotli 2
+tlatololli
+toloa
+cenecomonilli
+temactecahualiztli
+temactecahuac
+mactecahua
+temactecahuani
+hueycalmimilolli
+amaxtlatl
+ilhuicatilmatli
+tlacochcalcatl
+pacyotl 2
+motonalhui
+tlalcuapaliztli
+tlalcuapalilli
+tlalcuapa
+anihuaya
+huacaloa
+nalquixtiliztli
+huaznenqui
+zazanactli
+toteputzco
+ilhuicatepoztotl
+ximani
+tlatzonicquetzatilli
+tzonicquetza
+tlatzonicquetzatli
+atlacanemiliztli
+atlacanemini
+tlatemachihualli
+temachihua
+huahuana
+tlamachihualiztli
+xocoyolli
+matlacyei
+caxtolpoalli
+cempoalomatlactli
+cempoaloncaxtolli
+tepozcalmimilolli
+cuatzontli
+tlaxoxotlalli
+patlalli
+yei
+chicuetzontli
+chicnauhtzontli
+yeixpan
+yeitlatehuilli
+pohualtlahtoyan
+tlauhtli 2
+yeiliztli
+tlapiyecuicaliztli
+acalli pepexocatihuitztli
+tetzihuitl
+tlaocoxqui
+tlaocoyaliztli
+tepoztequi
+aaci 2
+cohuatl
+ehecacoamixtli
+tlapitzalhualiztli
+tlapitzalcuacuahuitl
+pepetotl
+tlacueponia
+cuauhtepontli
+cuauhtzomitl
+tlacaicpalli
+tlalhuitequi
+tlalhuitequiliztli
+aactia
+aactializtli
+xohuilli
+tlatecuinalotl
+tlapatiotl
+cuitlananacatl
+tehuatl
+mo-
+ti-
+hueytlapitzalcuacuahuitl
+totztli
+tetzauhcocoliztli
+eztlatlaxtini
+cocohtli
+tenancalli
+ixpatzac
+ceyotl
+Tollantzinco
+Tollantepec
+tolipan
+Toltepec
+Toltitlan
+tlahquilli
+tlaza 3
+caxtilcuicatl
+nochtli
+azcanochtli
+nochtlan
+cecectlan
+tuniciatl
+Tunicia
+cicuilli 1
+tlatetepacholli
+tetepachoa
+turcatl
+turquitecatl
+Torin
+ahuicyayotl
+ahuicyaniliztli
+ahuicyayoani
+ahuicyani
+ahuicyayoa
+Turmenistania
+turmenistaniatl
+teoxihuitl
+xiuhtomolli
+Turquia
+necuhtlatepitzahualli
+Tototepec
+Tuvalu 
+Tochpan
+Tochtepec
+Tochtlan
+tuzan
+Tzapotlatena
 </div>	 
 		 
 	 </body>
