--- a/index.html
+++ b/index.html
@@ -9120,7 +9120,47 @@ Tuxpan
 Tuxtepec 
 Tuxtla 
 tuza
-Tzapotlatena 
+Tzapotlatena
+umbral
+un día
+uninuto
+un pocoás
+un
+una vez
+una vez que
+unción
+ungido con aceite
+ungido
+ungir 
+unidad
+unidad
+unido
+unión
+unir
+unir 
+universidad
+universidad
+universidad
+universo
+uno a uno
+unos
+untar
+uña
+Urano
+urbanidad
+urbanidad
+urbanista
+urticaria
+uruguayo
+usar 
+usted
+ustedes 
+ustedes difuntos
+ustedes
+Usulatán 
+Utah
+útil
+uva
 </div>
 
 <div class="nahuatl">
@@ -18203,6 +18243,46 @@ Tochtepec
 Tochtlan
 tuzan
 Tzapotlatena
+tlaixcuahuitl
+ce tonalli
+achitzinca
+oc achi
+ce
+ceppa
+icuac
+teozatiliztli
+tlaoxitl
+teozalli
+oza
+cetiliztli
+cemaxcayotl
+cepanca
+centiliztli
+cepanca
+centilia 2
+machtiloyan
+telpochcalli
+hueytlamachtilcalco
+cemanahuac
+ceceyeca
+cequi
+axoa
+iztetl
+Tetzcantzontli
+nematcayotl
+altepeyotl
+altepetlaniani
+chincualzahuatl
+urucuariatl
+manilia
+tehuantzin
+an-
+nanmihcatzitzintin
+amehuantin
+Ocelotan
+Yutan
+anehuatzi
+xocomecatl
 </div>	 
 		 
 	 </body>
