--- a/index.html
+++ b/index.html
@@ -9161,6 +9161,233 @@ Usulatán
 Utah
 útil
 uva
+vaca 
+vacío
+vado
+vagabundo
+vagina
+vagina
+vago
+vainilla 
+Valencia
+valenciano
+valenciano 
+valentía
+valer
+valiente
+valiente
+valle
+valle
+valor
+vamos
+vanidad
+vanidad
+Vanuatu
+vapor de agua
+vapor
+vaporoso
+vaquería
+vaquero
+vaquitaarina
+vara
+vara torcida
+varilla
+varonil
+Varsovia
+vasco
+vasco
+vaso
+vaso
+vecina
+vecindad
+vecino
+vecino 
+vega
+veinte
+vejez
+vejiga
+vela de barco
+vela
+vela
+velación de losuertos
+velada
+velador
+velatorio 
+vello de laano
+vello
+velo
+veloz
+vena
+vena
+venados
+vencedor
+vencedor
+vencer 
+vencido
+vendedor de libros
+vendedor de papel
+vendedor de perfumes
+vendedor de pinturas
+vendedor de ropa
+vendible
+vendible 
+veneno
+venenoso
+venezolano
+venezolano 
+Venezuela
+venganza
+vengarse
+venir
+venta
+ventaja
+ventana
+ventanal
+Venus
+ver a alguien 
+ver detenidamente
+ver entre sueños
+ver
+Veracruz 
+veracruzano
+veranda
+veraniego
+verano
+verbena
+verbo
+verdad
+verde
+verde claro
+verde claro
+verde limón
+verde olivo
+verde oscuro 
+verde
+verder 
+verdolaga
+verdoso
+verdugo
+verdura
+vereda
+vergel
+vergonzoso
+vergüenza
+verja
+verruga
+verso
+vestíbulo
+vestido
+vestigio
+vestir 
+vestuario
+veterinario
+vetido de luto
+vía láctea
+viajar
+víbora de cascabel 
+vicio
+vicio
+vicioso
+victoria
+victorioso
+vida
+video
+videocasete
+vidriero 
+vidrio
+vieira 
+vieja
+viejecita
+viejilla
+viejita
+viejo
+viejo
+viejota
+Viena
+viento del poniente
+viento estival
+viento invernal
+viento
+viento nocturno
+viento seco
+vientre de embarazo
+vientre
+viernes
+Vietnam
+vietnamita
+viga
+vigilancia
+vigilia
+vigor
+vikingo
+vil
+villa
+Villa Guerrero 
+Villahermosa 
+villano
+vinagre
+vinatería
+vino blanco
+vino de chile ancho
+vino espeso
+vino
+vino tinto
+viña
+violín
+violinista
+virgen
+Virgen Maria
+virginidad
+virrey
+virtuoso
+viruela
+visa
+visco
+visible
+visión
+visitante 
+visor telescópico
+vista 
+vistar
+vitral
+vitrina
+viuda
+viudo
+vivenda
+viviente
+vivir en castidad
+vivir pobre 
+vivir
+vivir
+vivir
+vivo
+vívora de cascabel 
+vocabulario
+vocal
+vocerío
+volador
+volar
+volar de un lugar a otro
+volaruchas veces
+volcán
+voluntad
+vomitar
+vomitar 
+vomito
+vomito
+vos
+votación
+votar
+votar
+voto
+voy
+voz
+vuelo
+vuelta
+vuelto
+vuelve otra vez
+vuestro
+vulva
 </div>
 
 <div class="nahuatl">
@@ -18283,6 +18510,233 @@ Ocelotan
 Yutan
 anehuatzi
 xocomecatl
+cuacue
+huacallo
+panoayan 2
+ahuicyauhqui
+tepilli
+xacapilli
+zanemini
+tlilxochitl
+Valencia
+valencianecatl
+valenciatl
+oceloyotl
+patiyohua
+colotic
+tlapaltic
+tepetzalan
+ixtlahuac
+patiyotl
+tihui
+anequiloyotl
+yauhcatlayotl
+Vanuato
+tematztli
+apohtli
+ichpoticayotl
+cuacuauhcalli
+cuacuahueni
+acuacuahue
+tlacotl
+tlacololli
+tepoztlacotl
+oquichticauhtli
+Varsovia
+vaxcatecatl
+vaxcatl
+tlapouhtli
+atlihuani
+cihuacalpolpohui
+tepanamiquiliztli
+tepehuac
+calnahuac
+tlahuelmayan
+cempohualli
+huehueyotl
+axixtecomatl
+acalcuachpantli
+xicocuitlaocotl
+acalpantiliztli
+acochiztlamicqui
+ixtlatziniliztli 2
+tozoani
+acochiliztli
+matzontli
+tzomitl
+tlapachiuhcayotl
+iciuhcac
+ezcoctli
+yeznelhuatl
+mamaza
+tepahuaniani
+tepanahui
+pehua 2
+tepanahuilli
+amoxnamacac
+amanamacac
+xochicopalnamacac
+tlapalnamacac
+tlamanamacac
+namaco
+namacatic
+tencualactli
+temictli
+venezollatl
+venezoltecatl
+Venezollan
+tlahuelquixtiliztli
+tlahuelquixtia
+huiquia
+techiancalli
+tlapanahuiliztli
+tlanexillotl
+tlachialoyan
+tonquitli
+itta
+cecemitta
+cochitia
+tlachia
+Totonicapan
+totonicatecatl
+cuauhchinamitl
+xupantlacayotl
+xupantlan
+tepechin
+ixcahuilli
+neltiliztli
+xoxoctli
+quiltic
+quilitic
+tlaxocotic
+cuilotic
+matlactic
+xoxoctic
+namaca
+itzmitl 1
+xopelehuac
+amopilhuani
+xoxochiliztli
+ohpitzactli
+xoxochitlan
+pinahuani
+pinahualiztli
+cuauhchayahuac
+tzotzocatl
+tlahtolyochitl
+ohcalli 2
+tilmahuatl
+tepaltlahtolli
+quentia
+tlachichihualoyan
+ticiyolcani
+micatilmahuac
+ilhuicapopoca
+ahuicyahui
+cuechcoatl
+ahuilquizaliztli
+ahuilneminiliztli
+ahuilnemini
+tepanahualiztli
+tepanahuani
+yoliztli
+videotl
+videocaxeti
+tehuilocaxchiuhqui
+tehuilotl
+amatzcalli
+ilamatl
+ilamatzintli
+ilamatontli
+ilamatzin
+huehue
+zolli 2
+ilamapolli
+Viena
+cihuatlampa ehecatl
+tonalehecatl
+cecehecatl
+ehecatl
+yohualehecatl
+ehecahuacqui
+cihuatetl 2
+huitetl
+macuililhuitl
+Vietnamia
+vietnamitecatl
+huapalitl
+ixtozolixtli
+tozoliztli
+pactinemiliztli
+viquintecatl
+atlazotli
+altepemaitl
+Tecuanloyan
+Cualnezcaltepec
+tlahpalihuic
+xococtli
+ocnamacoyan
+iztaoctli
+chiloctli
+octetzahuac
+octli
+tlapaloctli
+xocomecamilli
+violli
+violnemini
+ocuelichpoctli
+Maria ichpochtli (Tonantzin)
+ichpochyotl
+tlahtocateixiptlac
+yectli iyollo
+hueyzahuatl
+tlalnemachiotl
+ixnecuiltic
+ittoni
+tlachcottaliztli
+tetlapaloani
+huatequi 2
+tlachializtli 2
+tetlapaloa
+tlapaltehuilotl
+cuauhtehuilocalli
+oquichmicqui
+cihuamicqui
+nencayotl
+nehuemini
+pixtinemi
+anonaci
+yolia
+chantia
+chanti
+yolli 1
+tecuatlacoatl
+tlahtolloliztli
+celticaquiztli
+chachaiaquiztli
+patlani
+patlani
+patlantiquiza
+papalani
+tletepetl
+tlanequiliztli
+xochitia
+tzotla
+xochitializtli
+nezotlaliztli
+ameh-
+tetenehualiztli
+netolia
+tenehua 3
+netolli
+niauh
+tozquitl 2
+patlaniliztli
+cueptli
+tentzouhqui
+ohpana
+amohuan
+nenetl 2
 </div>	 
 		 
 	 </body>
