--- a/index.html
+++ b/index.html
@@ -9388,6 +9388,30 @@ vuelto
 vuelve otra vez
 vuestro
 vulva
+Xalco
+xenofobia
+xenofóbico
+xerófila
+xi
+Xico 
+Xicotepec 
+xílex
+xilonene 
+Xipe Totec 
+Xitle 
+Xiuhtecuhtli 
+Xoaltecuhtli 
+Xochiatipan 
+Xochicalco 
+xochimilca
+Xochimilco 
+Xochipilli 
+Xochiquetzal 
+Xochistlahuaca 
+xoconoxtle
+xoloezcuincle perro azteca 
+Xolotlán 
+Xonacatlán
 </div>
 
 <div class="nahuatl">
@@ -18737,6 +18761,30 @@ tentzouhqui
 ohpana
 amohuan
 nenetl 2
+Chalco
+chontalmamatiliztli
+chontalmamatli
+ximitl
+x
+Xico
+Xicotepec
+tecpatl
+xilonenen
+Xipe Totec
+Xictli
+Xiuhtecuhtli
+Xoaltecuhtli
+Xochiaticpan
+Xochicalco
+xochimilcatl
+Xochimilco
+Xochipilli
+Xochiquetzalli
+Xochixtlahuacan
+xoconochtli
+xoloitzcuintli
+Xolotlan
+Xonacatlan
 </div>	 
 		 
 	 </body>
