--- a/index.html
+++ b/index.html
@@ -9412,6 +9412,40 @@ xoconoxtle
 xoloezcuincle perro azteca 
 Xolotlán 
 Xonacatlán
+y si
+y
+y
+y
+ya
+ya es de noche
+ya es tarde
+ya no
+ya no puede
+yegua
+yelmo
+yema de huevo
+Yemen
+yemení
+yerbabuena 
+yerno
+yeso
+yi
+yo
+yo a ustedes
+yo soyexicano
+yo vivo en México
+yodo 
+yogurt
+yuca 
+Yucatán
+yucateco
+Yugoslavia
+Yugoslavia
+yugoslavo
+yunque
+yunta
+yutano
+yute
 </div>
 
 <div class="nahuatl">
@@ -18785,6 +18819,40 @@ xoconochtli
 xoloitzcuintli
 Xolotlan
 Xonacatlan
+tla
+ihuan
+huan
+auh
+yeh
+yeh tiayohuac
+yeh teotlac
+aco 2
+achuel
+cihuacahuayotl
+cuatepoztli
+atecoztic
+Yemenia
+yemeniatl
+alahuenotl
+montli
+tezoquitl
+y
+nehuatl
+namech-
+nehuatl nimexica
+nehuatl nichanti Mexico
+yoyotl 2
+xocoqui
+itzotl
+Yucatan
+yucatecatl
+Yugoslavia
+Servia huan Montenegro
+yugoslavitecatl
+tepoztlatzonaloni
+centlamantiqui
+yutatl
+yuhtli
 </div>	 
 		 
 	 </body>
